--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  /* height: clamp(var(--header-height), var(--header-height), var(--header-height)); */
+  height: var(--header-height);
   width: 100%;
   background: var(--bg-header);
   box-shadow: 0 0.25rem 1rem var(--shadow);
@@ -28,6 +28,11 @@
   align-items: center;
   justify-content: space-between;
   gap: 1.6rem;
+}
+
+.navbar .container {
+  display: flex;
+  align-items: center;
 }
 
 .navbar-branding {
