--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -1,11 +1,3 @@
-:root {
-  --bg-modal: hsl(0, 0%, 100%);
-  --bg-button: hsl(216deg, 100%, 45%);
-  --clr-text-light: hsl(0deg, 0%, 90%);
-  --clr-accent: hsl(216deg, 100%, 45%);
-  --clr-accent-hover: hsl(216deg, 100%, 35%);
-}
-
 .modal-wrapper {
   position: fixed;
   top: 0;
@@ -13,6 +5,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.35);
+  backdrop-filter: blur(1px);
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -33,7 +26,8 @@
   max-height: 90vh;
   overflow-y: auto;
   max-width: 540px;
-  background: var(--bg-modal);
+  background: var(--clr-text-light);
+  color: var(--clr-text-dark);
   border-radius: 6px;
 
   z-index: 2;
