--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -31,6 +31,7 @@ body {
   line-height: normal;
   scroll-behavior: smooth;
   font-family: var(--ff-family);
+
   font-weight: var(--fw-regular);
 }
 
@@ -52,6 +53,21 @@ ul {
   margin: 0;
 }
 
+.glass {
+  border: none;
+  -webkit-backdrop-filter: blur(var(--glass-blur, 40px));
+  backdrop-filter: blur(var(--glass-blur, 40px));
+  background-color: transparent;
+  background-image: linear-gradient(135deg, rgb(255 255 255 / var(--glass-opacity, 30%)) 0%, rgb(0 0 0/0%) 100%),
+    linear-gradient(
+      var(--glass-reflex-degree, 100deg),
+      rgb(255 255 255 / var(--glass-reflex-opacity, 10%)) 25%,
+      rgb(0 0 0/0%) 25%
+    );
+  box-shadow: 0 0 0 1px rgb(255 255 255 / var(--glass-border-opacity, 10%)) inset, 0 0 0 2px #0000000d;
+  text-shadow: 0 1px rgb(0 0 0 / var(--glass-text-shadow-opacity, 5%));
+}
+
 .text-muted {
   color: var(--clr-text-muted);
 }
@@ -69,6 +85,8 @@ ul {
 .app {
   display: flex;
   flex-direction: column;
+  background: hsl(var(--base-2));
+
   padding-top: var(--header-height);
   height: 100vh;
   width: 100vw;
@@ -76,7 +94,6 @@ ul {
 
 .scrollable-content {
   height: 100%;
-  background: var(--bg-main);
   overflow: auto;
 }
 
@@ -92,7 +109,7 @@ ul {
 }
 
 .progress .bar {
-  background: var(--clr-accent);
+  background: hsl(var(--accent));
   border-radius: var(--border-radius);
   height: var(--progress-height);
 }
