--- a/src/styles/collapse.css
+++ b/src/styles/collapse.css
@@ -1,7 +1,7 @@
 /* if there are more than 2 collapse-container add a separator */
 .collapse-container:not(:last-child) {
   border-radius: 0;
-  border-bottom: 1px dashed var(--clr-border);
+  border-bottom: 1px dashed hsl(var(--border), 0.5);
 }
 
 .collapse-button {
@@ -15,7 +15,6 @@
   padding: 0.5rem;
   margin: 0.25rem;
   width: 100%;
-  /* border-radius: 1.6rem; */
   border-radius: var(--border-radius);
   user-select: none;
 }
