--- a/src/styles/dropdown.css
+++ b/src/styles/dropdown.css
@@ -14,6 +14,7 @@
 
 .dropdown .menu.open {
   display: block;
+  box-shadow: 0 0 1.2rem 0rem hsla(var(--shadow), 0.3);
 }
 
 .dropdown-label {
@@ -22,7 +23,7 @@
 }
 
 .dropdown-label:hover {
-  color: var(--clr-accent);
+  color: hsl(var(--accent));
 }
 
 .menu {
@@ -32,7 +33,6 @@
   flex-direction: column;
   border-radius: var(--border-radius);
   flex-wrap: wrap;
-  box-shadow: 0 0 0.5rem 0.15rem var(--shadow);
 }
 
 .menu-item {
@@ -49,12 +49,12 @@
 }
 
 .menu-item:hover {
-  background-color: var(--clr-accent);
+  background-color: hsl(var(--accent));
   color: var(--clr-text-light, --clr-text);
   cursor: pointer;
 }
 
 .menu-item.is-selected {
-  background-color: hsl(var(--grey));
+  background-color: hsl(var(--accent));
   color: var(--clr-text-light, --clr-text);
 }
