HSL vars: commas or not?

--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -1,5 +1,4 @@
 html {
-  /*  Font related */
   --ff-family: "Fira Sans", sans-serif;
   --fw-light: 300;
   --fw-regular: 400;
@@ -12,7 +11,6 @@ html {
   --fs-large: clamp(1.56rem, calc(1vw + 1.31rem), 2.11rem);
   --fs-big: clamp(1.95rem, calc(1.56vw + 1.56rem), 2.81rem);
   --fs-huge: clamp(2.44rem, calc(2.38vw + 1.85rem), 3.75rem);
-  /* Static Colors */
   --black: 0, 0%, 0%;
   --white: 0, 0%, 100%;
   --red: 0, 60%, 50%;
@@ -25,27 +23,34 @@ html {
   --light: 0, 0%, 90%;
   --grey: 220, 10%, 45%;
   --disabled: 240, 10%, 50%;
-  /* Dynamic Colors */
-  --base: 220, 16%, 16%;
-  --base-1: 220, 20%, 20%;
-  --base-2: 220, 22%, 22%;
-  --base-3: 220, 25%, 25%;
-  --accent: 216, 100%, 45%;
-  --neutral: 220, 5%, 75%;
-  /* Others */
   --header-height: clamp(32px, 48px, 64px);
-  --border-radius: 0.75rem;
+  --border-radius: 1rem;
+
+  --base: 220, 16%, 16%;
+  --base-content: 220 13% 19%;
+
+  --base-100: 220, 22%, 22%;
+  --base-200: 220, 25%, 25%;
+  --base-300: 220, 28%, 28%;
+
+  --neutral: 220, 5%, 75%;
+  --neutral-content: 0, 0%, 100%;
+  --primary: 262 80% 40%;
+  --primary-content: 0 0% 100%;
+
+  --secondary: 316 70% 40%;
+  --secondary-content: 0 0% 100%;
 }
 
 /* If no theme is set, use light theme */
-[data-theme="light"],
-root:not([data-theme]) {
+[data-theme="light"] {
   --base: 220, 16%, 96%;
   --base-1: 220, 20%, 91%;
   --base-2: 220, 22%, 86%;
   --base-3: 220, 25%, 84%;
   --accent: 216, 100%, 45%;
   --neutral: 220, 5%, 75%;
+  --base-content: 0, 0%, 20%;
   --clr-label: hsl(216deg, 50%, 20%);
   --clr-text: hsl(0deg, 0%, 20%);
   --clr-text-light: hsl(var(--light));
@@ -58,17 +63,31 @@ root:not([data-theme]) {
 /* Color scheme toggle */
 [data-theme="dark"] {
   color-scheme: dark;
-  --base: 220, 16%, 16%;
-  --base-1: 220, 20%, 20%;
-  --base-2: 220, 22%, 22%;
-  --base-3: 220, 25%, 25%;
-  --accent: 216, 100%, 45%;
-  --neutral: 220, 5%, 75%;
-  --clr-label: hsl(216deg, 50%, 90%);
-  --clr-text: hsl(0deg, 0%, 90%);
-  --clr-text-light: hsl(var(--light));
-  --clr-text-dark: hsl(var(--dark));
-  --clr-text-placeholder: hsl(225deg, 17%, 90%);
+  --base: 220, 20%, 25%;
+  --base-100: 220, 20%, 20%;
+  --base-200: 220, 20%, 15%;
+  --base-300: 220, 20%, 13%;
+  --base-content: 220 15% 85%;
+  /* make a neutral color */
+  --neutral: 220, 18%, 14%;
+  --neutral-focus: 223, 17%, 8%;
+  --neutral-content: 220, 13%, 69%;
+
+  --accent: 216 100% 45%;
+  --accent-focus: 216, 100%, 50%;
+
+  --primary: 220 100% 40%;
+  --primary-focus: 220 100% 35%;
+  --primary-content: 0 0% 100%;
+
+  --secondary: 316 70% 40%;
+  --secondary-focus: 316 70% 45%;
+  --secondary-content: 0 0% 100%;
+
+  --red: 0, 70%, 40%;
+  --red-focus: 0, 70%, 35%;
+  --red-content: 0, 0%, 100%;
+
   --border: 0deg, 0%, 90%;
   --shadow: 0deg, 0%, 0%;
 }
