--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -7,16 +7,15 @@
 
 .card {
   overflow: hidden;
-  background-color: hsl(var(--base-1));
+  background-color: hsl(var(--base-100), 0.8);
   height: fit-content;
   width: clamp(200px, 100%, 480px);
-  overflow: auto;
+  color: hsl(var(--base-content));
   border-radius: var(--border-radius);
 }
 
 .card-header {
   padding: 2rem;
-  color: var(--clr-text);
   font-size: var(--fs-regular);
   font-weight: var(--fw-light);
   height: auto;
