--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -8,7 +8,8 @@
   width: 100%;
   height: 100%;
   line-height: normal;
-  background: hsl(var(--base-3, --white));
+  --bg-opacity: 0.4;
+  background: hsl(var(--base-200), var(--bg-opacity));
   outline: currentcolor none medium;
   border: 2px solid transparent;
   resize: vertical;
@@ -17,34 +18,22 @@
 }
 
 .textarea-container {
-  overflow: hidden;
   position: relative;
   display: flex;
   flex-direction: column;
   height: 100%;
 }
 
+.input:focus-within,
+.textarea:focus-within {
+  --border-opacity: 1;
+  border-color: hsl(var(--base-content) / var(--border-opacity));
+}
+
 input:disabled,
 textarea:disabled {
   opacity: 0.5;
   cursor: not-allowed;
-}
-
-input:focus,
-textarea:focus {
-  outline: none;
-}
-
-input:focus-within,
-input:focus,
-textarea:focus-within {
-  border: 2px solid hsl(var(--accent), 0.45);
-}
-
-/* check if color-scheme is dark */
-[data-theme="dark"] input:focus-within,
-[data-theme="dark"] textarea:focus-within {
-  background-color: hsl(var(--accent), 0.1);
 }
 
 input::placeholder,
