--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -12,24 +12,15 @@
   align-items: center;
 }
 
-.modal-close {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  padding: 1.2rem;
-  cursor: pointer;
-}
-
 .modal {
   position: relative;
   width: clamp(250px, 100%, 540px);
   max-height: 90vh;
   overflow-y: auto;
   max-width: 540px;
-  background: var(--clr-text-light);
-  color: var(--clr-text-dark);
-  border-radius: 6px;
-
+  background: hsl(var(--neutral));
+  color: hsl(var(--neutral-content));
+  border-radius: var(--border-radius);
   z-index: 2;
   padding: 32px 40px;
 }
