--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -7,10 +7,10 @@
 
 .card {
   overflow: hidden;
-  background-color: hsl(var(--base-100), 0.8);
+  background-color: hsl(var(--surface-100), 0.8);
   height: fit-content;
   width: clamp(200px, 100%, 480px);
-  color: hsl(var(--base-content));
+  color: hsl(var(--surface-content));
   border-radius: var(--border-radius);
 }
 
