--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,23 +1,25 @@
+:root {
+  --top-offset: 0;
+}
+
 .header {
   z-index: 1;
   position: fixed;
-  top: 0;
+  top: var(--top-offset);
   left: 0;
   height: var(--header-height);
   width: 100%;
-  background: hsl(var(--secondary));
-  /* box-shadow: 0 0.25rem 1rem hsl(var(--shadow), 0.1); */
-  color: var(--base-content);
-  fill: var(--base-content);
+  background: hsl(var(--surface-content));
+  color: hsl(var(--surface));
+  fill: hsl(var(--surface));
   display: flex;
   align-items: center;
-  padding-block: 1rem;
 }
 
 .navbar {
   display: flex;
   align-items: center;
-  gap: 1.6rem;
+  gap: 1.5rem;
 }
 
 .navbar nav {
@@ -27,7 +29,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 1.6rem;
+  gap: 1.5rem;
 }
 
 .navbar .container {
@@ -49,8 +51,3 @@
   margin-right: 0;
   justify-content: center;
 }
-
-/* select parent element of github icon */
-/* *:hover > svg {
-  stroke: hsl(var(--accent));
-} */
