--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,7 +15,7 @@
 @import url("reset.css");
 
 /*
-  This sets the base font size to 10px, which makes it easier to work with rems.
+  This sets the surface font size to 10px, which makes it easier to work with rems.
   The important thing to understand is that the html tag font-size need not be the same as the font-size on the body tag. 
 */
 html {
@@ -29,7 +29,7 @@ html {
 }
 
 body {
-  color: hsl(var(--base-content));
+  color: hsl(var(--surface-content));
   font-size: var(--fs-medium);
   line-height: normal;
   scroll-behavior: smooth;
@@ -56,18 +56,23 @@ ul {
 }
 
 .glass {
-  border: none;
-  -webkit-backdrop-filter: blur(var(--glass-blur, 40px));
-  backdrop-filter: blur(var(--glass-blur, 40px));
-  background-color: transparent;
-  background-image: linear-gradient(135deg, rgb(255 255 255 / var(--glass-opacity, 30%)) 0%, rgb(0 0 0/0%) 100%),
+  /* backdrop-filter: blur(var(--glass-blur, 40px));
+  background-color: #0000;
+  background-image: linear-gradient(135deg, rgb(255 255 255 / var(--glass-opacity, 30%)) 0%, #0000 100%),
     linear-gradient(
       var(--glass-reflex-degree, 100deg),
       rgb(255 255 255 / var(--glass-reflex-opacity, 10%)) 25%,
-      rgb(0 0 0/0%) 25%
+      #0000 25%
     );
   box-shadow: 0 0 0 1px rgb(255 255 255 / var(--glass-border-opacity, 10%)) inset, 0 0 0 2px #0000000d;
   text-shadow: 0 1px rgb(0 0 0 / var(--glass-text-shadow-opacity, 5%));
+  border: 0; */
+  background: hsl(var(--surface), 0.3);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px hsla(0, 0%, 0%, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid hsla(0, 0%, 84%, 0.3);
 }
 
 .container > * {
@@ -83,9 +88,8 @@ ul {
 .app {
   display: flex;
   flex-direction: column;
-  background: hsl(var(--base), 1);
-
-  padding-top: var(--header-height);
+  background: hsl(var(--surface), 1);
+  padding-top: calc(var(--header-height) + 1rem);
   height: 100vh;
   width: 100vw;
 }
